--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,31 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
 body {
     height: 100vh;
-    weight: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: rgb(10, 113, 230, 1);
+    align-items: center; 
+    margin: 0;
+    background-color: rgb(13, 86, 231);
 }
 
-#game-board {
+.game {
+    text-align: center;
     background-color: #ccc;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.game-board {
+    display: grid;
     width: 100vmin;
     height: 100vmin;
-    display: grid;
-    grid-template-rows: repeat(21, 1fr);
-    grid-template-columns: repeat(21, 1fr);
+    background-color: #e0e0e0;
+   grid-template-rows: repeat(21, 1fr);
+   grid-template-columns: repeat(21, 1fr);
+}
+
+.score, .level {
+    margin: 10px;
+    font-weight: bold;
 }
