--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,43 @@
 body {
+    background: rgba(212, 212, 211, 1);
+}
+
+.grid {
+    width: 200px;
+    height: 200px;
+    border: 1px solid red;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.grid div {
+    width: 20px;
+    height: 20px;
+}
+
+.snake {
+    background: hsl(200, 100%, 50%);
+}
+
+.apple {
+    background: yellow;
+    border-radius: 20px;
+}
+
+.popup {
+    background: rgb(32, 31, 31);
+    width: 100px;
+    height: 100px;
+    position: fixed;
+    top: 100px;
+    left: 100px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+}
+
+/*body {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -25,7 +64,17 @@ body {
    grid-template-columns: repeat(21, 1fr);
 }
 
+.snake {
+    background-color: hsl(200, 100%, 50%);
+    border: .25vmin solid black;
+}
+
+.food {
+    background-color: hsl(50, 100%, 50%);
+    border: .25vmin solid black;
+}
+
 .score, .level {
     margin: 10px;
     font-weight: bold;
-}
+}*/
