--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,80 +1,82 @@
+:root { /*Web Dev Simplified Tutorial*/
+    --hue-neutral: 200;
+    --hue-wrong: 0;
+    --hue-correct: 145;
+}
+
 body {
-    background: rgba(212, 212, 211, 1);
-}
-
-.grid {
-    width: 200px;
-    height: 200px;
-    border: 1px solid red;
-    margin: 0 auto;
+    --hue: var(--hue-neutral); /*Web Dev Simplified Tutorial*/
     display: flex;
-    flex-wrap: wrap;
-}
-
-.grid div {
-    width: 20px;
-    height: 20px;
-}
-
-.snake {
-    background: hsl(200, 100%, 50%);
-}
-
-.apple {
-    background: yellow;
-    border-radius: 20px;
-}
-
-.popup {
-    background: rgb(32, 31, 31);
-    width: 100px;
-    height: 100px;
-    position: fixed;
-    top: 100px;
-    left: 100px;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-}
-
-/*body {
-    height: 100vh;
     width: 100vw;
-    display: flex;
+    height: 100vh;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+    background-color: hsl(var(--hue), 100%, 20%); /*Web Dev Simplified Tutorial*/
     margin: 0;
-    background-color: rgb(13, 86, 231);
+    padding: 0;
+}
+body.correct {
+    --hue: var(--hue-correct);
 }
 
-.game {
-    text-align: center;
-    background-color: #ccc;
-    padding: 20px;
+body.wrong {
+    --hue: var(--hue-wrong);
+}
+
+#question-box {
+    background-color: #fff;
+    width: 880px;
+    max-width: 80%;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border: 1px solid black;
+    box-shadow: 0 0 10px 1px;
 }
 
-.game-board {
+.btn-grid { /*Web Dev Simplified Tutorial*/
     display: grid;
-    width: 100vmin;
-    height: 100vmin;
-    background-color: #e0e0e0;
-   grid-template-rows: repeat(21, 1fr);
-   grid-template-columns: repeat(21, 1fr);
+    grid-template-columns:repeat(2, auto);
+    gap: 5px;
+    padding: 10px 20px;
 }
 
-.snake {
-    background-color: hsl(200, 100%, 50%);
-    border: .25vmin solid black;
+.btn:hover {
+    border:2px solid #000;
 }
 
-.food {
-    background-color: hsl(50, 100%, 50%);
-    border: .25vmin solid black;
+.btn {
+    --hue: var(--hue-neutral);
+    border: 1px solid hsl(var(--hue),100%, 30%);
+    background-color: hsl(var(--hue),100%, 50%);
+    border-radius: 5px;
+    padding: 10px;
+    color: white;
+    outline: none;
+
 }
 
-.score, .level {
-    margin: 10px;
-    font-weight: bold;
-}*/
+.btn.correct {
+    --hue: var(--hue-correct);
+    color: black; 
+}
+
+.btn.wrong {
+    --hue: var(--hue-wrong);
+}
+
+#start-btn, #next-btn {
+    background-color: hsl(var(--hue),100%, 70%);
+    font-size: 1.4rem;
+    font-weight: bold; 
+    padding: 10px 20px; 
+    border-radius: 5px;   
+}
+
+.controls {
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+.hide {
+    display: none;
+}
