--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,33 @@ body {
     font-weight: bold;
 }
 
+/*#replay-menu {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 700px;
+    height: 250px;
+    transform: translate(-64%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    z-index: 1000;
+    display: none;
+}
+
+.game-over-msg {
+    font-weight: bold;
+    text-align: center;
+}
+
+#play-again-btn {
+    padding: 20px;
+    margin-left: 16rem;
+}
+
+#quit-btn {
+    padding: 20px;
+}*/
+
 .hide {
     display: none;
 }
