--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,15 @@ body {
     font-size: 1.4rem;
     font-weight: bold; 
     padding: 10px 20px; 
-    border-radius: 5px;   
+    border-radius: 5px;
+}
+
+#start-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .controls {
@@ -83,12 +91,20 @@ body {
     font-weight: bold;
 }
 
-/*#replay-menu {
+h2 {
+    color: #fff;
+}
+
+.int {
+    color: #fff;
+}
+
+#replay-menu {
     position: fixed;
     top: 50%;
     left: 50%;
-    width: 700px;
-    height: 250px;
+    width: 100vw;
+    height: auto;
     transform: translate(-64%, -50%);
     background-color: #fff;
     padding: 20px;
@@ -108,7 +124,7 @@ body {
 
 #quit-btn {
     padding: 20px;
-}*/
+}
 
 .hide {
     display: none;
