outcommented style rules for quit button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,10 +124,10 @@ h2 {
     margin: 1rem 0;
 }
 
-#quit-btn {
+/*#quit-btn {
     padding: 20px;
     margin: 1rem 0;
-}
+}*/
 
 .hide {
     display: none;
