--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,3 +144,9 @@ h2 {
         width: 880px;
     }
 }
+
+@media screen and (min-width: 992px) {
+    #replay-menu {
+        left: 22%;
+    }
+}
