--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,20 @@ h2 {
     display: none;
 }
 
+#progress-bar { /*based on: https://www.w3schools.com/howto/howto_js_progressbar.asp*/
+    width: 100%;
+    background-color: grey;
+}
+
+#my-bar { /*based on: https://www.w3schools.com/howto/howto_js_progressbar.asp*/
+    width: 1%;
+    height: 30px;
+    background-color: green;
+    text-align: center;
+    line-height: 30px; 
+    color: white;
+}
+
 /*#quit-btn {
     padding: 20px;
     margin: 1rem 0;
