--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,10 +146,25 @@ h2 {
     display: none;
 }
 
-/*#quit-btn {
-    padding: 20px;
-    margin: 1rem 0;
-}*/
+#quit-btn {
+    position: absolute;
+    display: flex;
+    top: 25%;
+    left: 90%;
+    justify-content: flex-end;
+    align-items: end;
+    padding: 0;
+    border-radius: 50%;
+    /*margin: 32rem 60rem;*/
+}
+
+.icon {
+    font-size: 24px;
+}
+
+#unmute-icon {
+    display: none;
+}
 
 .hide {
     display: none;
