--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,45 @@ h2 {
 #text-overlay h2 {
     font-size: 2rem;
 }
+ /* The Modal (background) */
+ .modal { /*https://www.w3schools.com/howto/howto_css_modals.asp*/
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    color: #000;
+    font-weight: bold;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: hsl(var(--hue), 100%, 50%);
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #000;;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  } 
 
 .hide {
     display: none;
