--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ body {
 
 }
 
-#start-btn, #start-btn-btn {
+#start-btn-quiz, #start-btn-home {
     background-color: hsl(var(--hue),100%, 70%);
     font-size: 1.4rem;
     font-weight: bold; 
@@ -169,7 +169,7 @@ h2 {
 #homepage {
     width: 100vw;
     height: 100%;
-    background: url("/assets/images/jon-tyson-FlHdnPO6dlw-unsplash.jpg") no-repeat center/cover;
+    background: url("../images/jon-tyson-FlHdnPO6dlw-unsplash.jpg") no-repeat center/cover;
 }
 
 #text-overlay {
@@ -187,45 +187,59 @@ h2 {
 #text-overlay h2 {
     font-size: 2rem;
 }
- /* The Modal (background) */
- .modal { /*https://www.w3schools.com/howto/howto_css_modals.asp*/
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
+
+.modal-overlay {
+    /*display: none;*/
+    background: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    color: #000;
-    font-weight: bold;
-  }
-  
-  /* Modal Content/Box */
-  .modal-content {
-    background-color: hsl(var(--hue), 100%, 50%);
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #000;;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+ 
+.modal-wrapper {
+    width: 300px;
+    height: 300px;
+    background: ghostwhite;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+ 
+.open-modal-btn-wrapper {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+ 
+.close-modal-btn,
+.open-modal-btn {
+    padding: 8px;
+    background: slateblue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    color: ghostwhite;
+    font-weight: 5px;
+    margin-left: auto;
+    margin-top: 10px;
+    margin-right: 10px;
     cursor: pointer;
-  } 
+}
+ 
+.close-btn-wrapper {
+    display: flex;
+}
+ 
+.modal-content {
+    margin: 20px auto;
+    max-width: 210px;
+    width: 100%;
+}
 
 .hide {
     display: none;
