--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,12 @@ h2 {
     margin: 1rem 0;
 }
 
+#replay-btn {
+    padding: 20px;
+    margin: 1rem 1rem;
+    float: right;
+}
+
 #counter {
     color: white;
     display: none;
@@ -188,8 +194,7 @@ h2 {
     font-size: 2rem;
 }
 
-.modal-overlay {
-    /*display: none;*/
+/*.modal-overlay {
     background: rgba(0, 0, 0, 0.7);
     width: 100%;
     height: 100%;
@@ -231,7 +236,7 @@ h2 {
     cursor: pointer;
 }
  
-.close-btn-wrapper {
+/*.close-btn-wrapper {
     display: flex;
 }
  
@@ -239,7 +244,7 @@ h2 {
     margin: 20px auto;
     max-width: 210px;
     width: 100%;
-}
+}*/
 
 .hide {
     display: none;
