--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,7 @@ h2 {
 #homepage {
     width: 100vw;
     height: 100%;
-    background: url("../images/jon-tyson-FlHdnPO6dlw-unsplash.jpg") no-repeat center/cover;
+    background: url("../images/quiz.webp") no-repeat center/cover;
 }
 
 #text-overlay {
