--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,8 +60,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: auto;
+    margin: 0 auto;
 }
 
 /*.controls {
@@ -175,12 +176,12 @@ h2 {
 #homepage {
     width: 100vw;
     height: 100%;
-    background: url("../images/quiz.webp") no-repeat center/cover;
+    background: url("../images/question-mark.webp") no-repeat center/cover;
 }
 
 #text-overlay {
     position: relative;
-    top: 50%;
+    top: 40%;
     left: 50%; 
     transform: translate(-50%, -50%);
     color: #DDE3fD;
@@ -193,6 +194,7 @@ h2 {
 #text-overlay h2 {
     font-size: 2rem;
 }
+
 
 /*.modal-overlay {
     background: rgba(0, 0, 0, 0.7);
@@ -252,16 +254,16 @@ h2 {
 
 @media screen and (min-width: 325px) {
     #question-box {
-        width: 100vw;
+        width: 95vw;
         height: auto;
     }
-   
+
 }
 
 @media (orientation: landscape) {
-    #question-box {
+    /*#question-box {
         width: 880px;
-    }
+    }*/
 }
 
 @media screen and (min-width: 992px) {
