--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-
-
 :root { /*Web Dev Simplified Tutorial*/
     --hue-neutral: 200;
 }
@@ -39,7 +37,7 @@ body {
 }
 
 .btn:hover {
-    border:2px solid #000;
+    border:1px solid #000;
 }
 
 .btn {
@@ -67,12 +65,6 @@ body {
     height: auto;
     margin: 0 auto;
 }
-
-/*.controls {
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-}*/
 
 .score-area {
     display: flex;
@@ -198,86 +190,308 @@ h2 {
     font-size: 2.5rem;
 }
 
-/*.modal-overlay {
-    background: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
- 
-.modal-wrapper {
-    width: 300px;
-    height: 300px;
-    background: ghostwhite;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
- 
-.open-modal-btn-wrapper {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
- 
-.close-modal-btn,
-.open-modal-btn {
-    padding: 8px;
-    background: slateblue;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 15px;
-    color: ghostwhite;
-    font-weight: 5px;
-    margin-left: auto;
-    margin-top: 10px;
-    margin-right: 10px;
-    cursor: pointer;
-}
- 
-/*.close-btn-wrapper {
-    display: flex;
-}
- 
-.modal-content {
-    margin: 20px auto;
-    max-width: 210px;
-    width: 100%;
-}*/
-
-#timer {
-    color: #fff;
-    float: right;
-    margin: -40px 40px;
-
-}
-
-#time-left {
-    color: red;
-}
-
 .hide {
     display: none;
 }
 
-@media screen and (min-width: 325px) {
+@media screen and (width: 320px) {
     #question-box {
         width: 95vw;
         height: auto;
     }
+    #quit-btn {
+        top: 11%;
+        left: 90%;
+    }
+    #homepage {
+        overflow:hidden;
+    }
+    #text-overlay h1 {
+        font-size: 2rem;
+    }
+}
+   
+@media screen and (width: 480px) {
+    #question-box {
+    width: 95vw;
+    height: auto;
+}
+#quit-btn {
+    top: 15%;
+    left: 90%;
+}
+}
 
+@media screen and (width: 568px) {
+    #question-box {
+    width: 95vw;
+    height: auto;
+}
+#quit-btn {
+    top: 15%;
+    left: 90%;
+}
+#mute-btn {
+    margin-top: 4rem;
+}
+}
+
+@media screen and (width: 667px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 20%;
+        left: 92%;
+    }
+}
+
+@media screen and (width: 375px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 26%;
+        left: 90%;
+    }
+}
+
+@media screen and (width: 812px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 20%;
+        left: 94%;
+    }
+}
+
+@media screen and (width: 360px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 26%;
+        left: 90%;
+    }
+}
+
+@media screen and (width: 390px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 27%;
+        left: 90%;
+    }
+}
+
+@media screen and (width: 800px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 20%;
+        left: 94%;
+    }
+}
+
+@media screen and (width: 844px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 20%;
+        left: 94%;
+    }
+}
+
+@media screen and (width: 412px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 28%;
+        left: 90%;
+    }
+}
+
+@media screen and (width: 414px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 28%;
+        left: 90%;
+    }
+}
+
+@media screen and (width: 428px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 28%;
+        left: 90%;
+    }
+}
+
+@media screen and (width: 915px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 22%;
+        left: 94%;
+    }
+}
+
+@media screen and (width: 926px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 22%;
+        left: 94%;
+    }
+}
+
+
+@media screen and (width: 883px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 22%;
+        left: 94%;
+    }
+}
+
+@media screen and (width: 896px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 22%;
+        left: 94%;
+    }
+}
+
+@media screen and (width: 760px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 20%;
+        left: 94%;
+    }
+}
+
+@media screen and (width: 384px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 27%;
+        left: 90%;
+    }
+}
+
+@media screen and (width: 854px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 20%;
+        left: 93%;
+    }
+}
+
+@media screen and (width: 768px)
+{
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 32%;
+        left: 94%;
+    }
+}
+
+@media screen and (width: 810px)
+{
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 32%;
+        left: 93%;
+    }
+}
+
+@media screen and (min-width: 1024px)
+{
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 32%;
+        left: 94%;
+    }
+}
+
+@media screen and (width: 800px) and (height:1280px)
+{
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 35%;
+        left: 94%;
+    }
+}
+
+
+/*@media screen and (max-width: 767px) {
+    #question-box {
+        width: 95vw;
+        height: auto;
+    }
+    #quit-btn {
+        top: 29%;
+        left: 90%;
+       
+    }
 }
 
 @media (orientation: landscape) {
-    /*#question-box {
-        width: 880px;
-    }*/
-}
+    #quit-btn {
+        top: 23%;
+        left: 94%;
+       
+    }
+}*/
 
 @media screen and (min-width: 992px) {
     #replay-menu {
